fix header and footer pls

--- a/css/main.css
+++ b/css/main.css
@@ -285,3 +285,6 @@ img.About-Us.User-registration.Ipad-logo-size.logo-image{
         padding-right: 260px;
     }
 }
+.footer-icons{
+width: 28px;
+}
