--- a/css/main.css
+++ b/css/main.css
@@ -354,14 +354,76 @@ a.second-nav-header-radius.ui-link.ui-btn {
 .main{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    grid-gap: 1px;
 }
 .item{
-    margin: 20px;
-    background: #000;
-    width: 150px;
-    height: 150px;
+    margin: 13px;
+    background:#6060602e;
+    border-radius: 20px;
+    width: 180px;
+    height: 190px;
 }
-
+img.product-image-items-display {
+    margin-top: 20px;
+}
+p.Product-Price {
+    text-align: left;
+    line-height: 3px;
+    margin-left: 20px;
+}
+h3.product-addtocart-popup {
+    text-align: center;
+    font-size: 16px;
+    margin-top: -20px;
+    font-weight: bold;
+}
+.price{
+    display: inline-block;
+    font-size: 14px;
+    line-height: 1px;
+    font-weight: 100;
+}
+.float-price{
+    float: right;
+}
+button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+    display: inline-block;
+    float: right;
+    width: auto;
+    font-size: 10px;
+    padding: unset;
+    border: none;
+    background: none;
+    margin-top: 7px;
+}
+img.product-popup-icon {
+    width: 14px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+.add-to-cart-button-div {
+    background: #EF963A;
+    display: inline-flex;
+    border-radius: 29px;
+    width: 29px;
+    padding-bottom: 5px;
+    padding: 7px;
+}
+img.add-to-cart-plus-icon {
+    width: 25px;
+    padding-left: 2px;
+    margin-bottom: -2px;
+}
+.align-addtocart {
+    float: right;
+    margin-top: -30px;
+    margin-right: 10px;
+}
+.align-favourite {
+    float: right;
+    margin-right: 10px;
+    margin-bottom: -30px;
+}
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
     img.Ipad-logo-size.logo-image {
       width: 60%;
@@ -377,16 +439,29 @@ a.second-nav-header-radius.ui-link.ui-btn {
         display: grid;
         grid-template-columns: repeat(3,1fr);
     }
+    .item {
+        margin-left: 30px;
+        margin-bottom: 30px;
+   }
   }
   @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
     .main{
         display: grid;
         grid-template-columns: repeat(3,1fr);
     }
+    .item {
+        margin-left: 35px;
+        margin-bottom: 30px;
+   }
+  
   }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
     .main{
         display: grid;
         grid-template-columns: repeat(4,1fr);
     }
+    .item {
+        margin-left: 35px;
+        margin-bottom: 30px;
+   }
 }
