--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,11 @@ img.add-to-cart-plus-icon {
     margin-right: 10px;
     margin-bottom: -30px;
 }
+
+h3.heading.ui-content {
+    margin-left: -10px !important;
+    margin-bottom: -20px !important;
+}
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
     img.Ipad-logo-size.logo-image {
       width: 60%;
