--- a/css/main.css
+++ b/css/main.css
@@ -146,9 +146,7 @@ img.forgot-password.Ipad-logo-size.logo-image {
   width: 50%;
   /* margin-right: auto; */
   margin-left: 29px;
-  float: left;
-  margin-top: 125px;
-  /* margin-bottom: auto; */
+  float: left;/
   height: auto;
 }
 
@@ -429,6 +427,18 @@ h3.heading.ui-content {
     margin-left: -10px !important;
     margin-bottom: -20px !important;
 }
+/*iphone potrait*/
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+    button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+
+        margin-top: -3px;
+    }
+}
+/*iphone landscape*/
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
     img.Ipad-logo-size.logo-image {
       width: 60%;
@@ -438,7 +448,15 @@ h3.heading.ui-content {
     .login.ui-content {
       width: 50% !important;
     }
+    .w3-content {
+        max-width: 800px;
+    }
+    .product-details-container {
+        width: 100%;
+    }
+          
   }
+  /*ipad  landscape*/
   @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
     .main{
         display: grid;
@@ -448,7 +466,18 @@ h3.heading.ui-content {
         margin-left: 30px;
         margin-bottom: 30px;
    }
-  }
+   .w3-content {
+    max-width: 850px;
+}
+.product-details-container {
+    width: 100%;
+}
+button.single-product-page.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+    margin-right: 0px;
+}
+
+}
+/*ipad potrait*/
   @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
     .main{
         display: grid;
@@ -458,6 +487,12 @@ h3.heading.ui-content {
         margin-left: 35px;
         margin-bottom: 30px;
    }
+   .w3-content {
+    max-width: 820px;
+}
+.product-details-container {
+    width: 100%;
+}
   
   }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
@@ -469,4 +504,53 @@ h3.heading.ui-content {
         margin-left: 35px;
         margin-bottom: 30px;
    }
+   .w3-content {
+    max-width: 850px;
+    }
+    .product-details-container {
+        width: 95%;
+    }
+    .single-product-background.w3-content.w3-display-container {
+        padding: 70px !important;
+    }
+    .single-product.price{
+        font-size: 20px;
+    }
+}
+button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+
+    font-size: 60px;
+}
+
+p.single-product-page-title {
+    font-size: 50px;
+    font-weight: 500;
+    line-height: 1px;
+}
+.single-product-background.w3-content.w3-display-container {
+    background: #6060602e;
+    padding: 60px;
+    border-radius: 30px;
+}
+
+element.style {
+}
+span.single-product-page-photos-iconball.w3-badge.demo.w3-border.w3-transparent.w3-hover-white.w3-white {
+    width: 20px;
+    height: 20px;
+}
+.w3-large {
+    font-size: 30px!important;
+}
+img.single-product.product-popup-icon {
+    width: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: -50px;
+}
+.single-product{
+    font-size: 20px !important;
+}
+button.single-product-page.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+    margin-right: -10px;
 }
