--- a/css/main.css
+++ b/css/main.css
@@ -11,78 +11,6 @@ button.login-button.rounded-button.ui-btn.ui-btn-inline {
     width: 100% !important;
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-    img.Ipad-logo-size.logo-image {
-        width: 60%;
-        margin-bottom: -41px;
-    }
-    .login.ui-content {
-        width: 50% !important;
-    }
-}
-
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
-    img.register.Ipad-logo-size.logo-image {
-        width: 50%;
-    }
-    .login.ui-content {
-        width: 60% !important;
-    }
-    img.Ipad-logo-size.logo-image {
-        width: 50%;
-        margin-bottom: -40px !important;
-        margin-top: -40px;
-    }
-    img.forgot-password.Ipad-logo-size.logo-image {
-        width: 50%;
-        margin-bottom: -40px !important;
-        margin-top: -40px !important;
-    }
-    iframe#gmap_canvas {
-        width: 480px;
-    }
-    p.About-Us.Register-Account-Text {
-        padding-right: 125px !important;
-        margin-top: 30px !important;
-    }
-    p.UserNavigation.User-Profile-Edit.Register-Account-Text {
-        padding-right: 145px !important;
-    }
-    .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
-        padding-left: 145px !important;
-    }
-    ul.Profile-Navigation-List.ui-listview {
-        margin: 0em;
-        margin-top: 20px !important;
-        margin-bottom: 15px !important;
-    }
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
-  img.register.Ipad-logo-size.logo-image {
-    width: 65%;
-  }
-  img.Ipad-logo-size.logo-image {
-    width: 65%;
-  }
-  iframe#gmap_canvas {
-    width: 890px;
-  }
-  p.About-Us.Register-Account-Text {
-    padding-right: 60px !important;
-    margin-top: 30px !important;
-  }
-  p.UserNavigation.User-Profile-Edit.Register-Account-Text {
-    padding-right: 80px !important;
-  }
-  .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
-    padding-left: 80px !important;
-  }
-  h1.header-title.ui-title {
-    font-size: 35px !important;
-  }
-}
-
 img.Ipad-logo-size.logo-image {
     margin-bottom: -20px;
 }
@@ -144,6 +72,10 @@ img.forgot-password.Ipad-logo-size.logo-image {
     color: #ef963a;
 }
 
+.product{
+    display: grid;
+}
+
 .product-title-slideshow-container {
     width: auto;
     float: left;
@@ -159,34 +91,6 @@ img.forgot-password.Ipad-logo-size.logo-image {
 
 .product.ui-content {
     padding: 6em !important;
-}
-
-@media only screen and (max-device-width: 414px) {
-    .product-title-slideshow-container {
-        width: auto;
-        float: none;
-    }
-    .product-details-container {
-        margin-top: 2px;
-        height: auto;
-        float: none;
-        width: auto;
-    }
-    .w3-content {
-        max-width: 800px;
-    }
-    .w3-content,
-    .w3-auto {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .product-details-container button {
-        height: 90px;
-        font-size: xx-large;
-    }
-    .product-details-container p {
-        font-size: x-large;
-    }
 }
 
 p.User-Profile-Edit.Register-Account-Text {
@@ -207,15 +111,7 @@ img.User-registration.Ipad-logo-size.logo-image {
     margin-bottom: -40px;
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-    img.User-registration.Ipad-logo-size.logo-image {
-        width: 50%;
-        margin-bottom: -41px;
-    }
-    .login.ui-content {
-        width: 50% !important;
-    }
-}
+
 
 p.logout.User-Profile-Edit.Register-Account-Text {
     float: left;
@@ -245,19 +141,6 @@ ul.Profile-Navigation-List.ui-listview {
     margin-bottom: 60px;
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-    .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
-        padding-left: 250px;
-    }
-    p.UserNavigation.User-Profile-Edit.Register-Account-Text {
-        padding-right: 250px;
-    }
-    ul.Profile-Navigation-List.ui-listview {
-        margin: 0em;
-        margin-top: 40px;
-        margin-bottom: 40px;
-    }
-}
 
 p.About-Us.Register-Account-Text {
     float: right;
@@ -269,14 +152,6 @@ img.About-Us.User-registration.Ipad-logo-size.logo-image {
     margin-top: -40px;
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-    iframe#gmap_canvas {
-        width: 510px;
-    }
-    p.About-Us.Register-Account-Text {
-        padding-right: 260px;
-    }
-}
 
 .footer-icons {
     width: 28px;
@@ -302,50 +177,6 @@ img.About-Us.User-registration.Ipad-logo-size.logo-image {
     left: 0px;
     right: 0px;
     overflow: hidden;
-}
-
-@media only screen and (orientation: landscape) and (min-device-width: 768px) and (max-device-width: 1024px) {
-  .header-class {
-    position: fixed !important;
-    top: -3px;
-    left: 0px;
-    right: 0px;
-    overflow: hidden;
-    height: 12%;
-  }
-}
-
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
-  .header-class {
-    position: fixed !important;
-    top: -3px;
-    left: 0px;
-    right: 0px;
-    overflow: hidden;
-    height: 15%;
-  }
-}
-
-@media only screen and (orientation: portrait) and (max-device-width: 414px) {
-  .header-class {
-    position: fixed !important;
-    top: -3px;
-    left: 0px;
-    right: 0px;
-    overflow: hidden;
-    height: 5%;
-  }
-}
-
-@media only screen and (orientation: portrait) and (min-device-width: 768px) and (max-device-width: 1024px) {
-  .header-class {
-    position: fixed !important;
-    top: -3px;
-    left: 0px;
-    right: 0px;
-    overflow: hidden;
-    height: 7%;
-  }
 }
 
 .content-class {
@@ -502,115 +333,7 @@ h3.heading.ui-content {
 }
 
 
-/*iphone potrait*/
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
-  button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
-    margin-top: -3px;
-  }
-}
 
-
-/*iphone landscape*/
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-    img.Ipad-logo-size.logo-image {
-        width: 60%;
-        margin-bottom: -41px;
-    }
-    .login.ui-content {
-        width: 50% !important;
-    }
-    .w3-content {
-        max-width: 800px;
-    }
-    .product-details-container {
-        width: 100%;
-    }
-}
-
-
-/*Iphone  landscape*/
-
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
-    .main {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .item {
-        margin-left: 30px;
-        margin-bottom: 30px;
-    }
-    .w3-content {
-        max-width: 850px;
-    }
-    .product-details-container {
-        width: 100%;
-    }
-    button.single-product-page.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
-        margin-right: 0px;
-    }
-    .order-item-image {
-        width: 30% !important;
-    }
-    .order-item-text {
-        width: 68% !important;
-    }
-}
-
-
-/*ipad potrait*/
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
-    .main {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .item {
-        margin-left: 35px;
-        margin-bottom: 30px;
-    }
-    .w3-content {
-        max-width: 820px;
-    }
-    .product-details-container {
-        width: 100%;
-    }
-    .order-item-image {
-        width: 31% !important;
-    }
-    .order-item-text {
-        width: 68% !important;
-    }
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-    .main {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-    }
-    .item {
-        margin-left: 35px;
-        margin-bottom: 30px;
-    }
-    .w3-content {
-        max-width: 850px;
-    }
-    .product-details-container {
-        width: 95%;
-    }
-    .single-product-background.w3-content.w3-display-container {
-        padding: 70px !important;
-    }
-    .single-product.price {
-        font-size: 20px;
-    }
-    .order-item-image {
-        width: 25% !important;
-    }
-    .order-item-text {
-        width: 74% !important;
-    }
-}
 
 button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
     font-size: 60px;
@@ -719,4 +442,294 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
     background: none;
     padding: 0px;
     margin-top: -2px !important;
+}
+
+
+
+/*iphone potrait*/
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+    button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+        margin-top: -3px;
+    }
+}
+
+@media only screen and (orientation: portrait) and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .header-class {
+        position: fixed !important;
+        top: -3px;
+        left: 0px;
+        right: 0px;
+        overflow: hidden;
+        height: 7%;
+    }
+}
+
+
+@media only screen and (max-device-width: 414px) {
+    .product-title-slideshow-container {
+        width: auto;
+        float: none;
+    }
+    .product-details-container {
+        margin-top: 2px;
+        height: auto;
+        float: none;
+        width: auto;
+    }
+    .w3-content {
+        max-width: 800px;
+    }
+    .w3-content,
+    .w3-auto {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .product-details-container button {
+        height: 90px;
+        font-size: xx-large;
+    }
+    .product-details-container p {
+        font-size: x-large;
+    }
+}
+
+
+@media only screen and (orientation: landscape) and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .header-class {
+        position: fixed !important;
+        top: -3px;
+        left: 0px;
+        right: 0px;
+        overflow: hidden;
+        height: 12%;
+    }
+}
+
+@media only screen and (orientation: portrait) and (max-device-width: 414px) {
+    .header-class {
+        position: fixed !important;
+        top: -3px;
+        left: 0px;
+        right: 0px;
+        overflow: hidden;
+        height: 5%;
+    }
+}
+
+
+
+/*I Pad Potrait*/
+
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+
+    .main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .item {
+        margin-left: 35px;
+        margin-bottom: 30px;
+    }
+    .w3-content {
+        max-width: 820px;
+    }
+    .product-details-container {
+        width: 100%;
+    }
+    .order-item-image {
+        width: 31% !important;
+    }
+    .order-item-text {
+        width: 68% !important;
+    }
+
+    img.register.Ipad-logo-size.logo-image {
+        width: 65%;
+    }
+    img.Ipad-logo-size.logo-image {
+        width: 65%;
+    }
+    iframe#gmap_canvas {
+        width: 890px;
+    }
+    p.About-Us.Register-Account-Text {
+        padding-right: 60px !important;
+        margin-top: 30px !important;
+    }
+    p.UserNavigation.User-Profile-Edit.Register-Account-Text {
+        padding-right: 80px !important;
+    }
+    .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
+        padding-left: 80px !important;
+    }
+    h1.header-title.ui-title {
+        font-size: 35px !important;
+    }
+
+
+}
+
+
+
+
+
+/*I Pad Landscape*/
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
+
+
+    img.User-registration.Ipad-logo-size.logo-image {
+        width: 50%;
+        margin-bottom: -41px;
+    }
+    .login.ui-content {
+        width: 50% !important;
+    }
+
+
+    .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
+        padding-left: 250px;
+    }
+    p.UserNavigation.User-Profile-Edit.Register-Account-Text {
+        padding-right: 250px;
+    }
+    ul.Profile-Navigation-List.ui-listview {
+        margin: 0em;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
+    iframe#gmap_canvas {
+        width: 510px;
+    }
+    p.About-Us.Register-Account-Text {
+        padding-right: 260px;
+    }
+
+    img.Ipad-logo-size.logo-image {
+        width: 60%;
+        margin-bottom: -41px;
+    }
+    .login.ui-content {
+        width: 50% !important;
+    }
+    .w3-content {
+        max-width: 800px;
+    }
+    .product-details-container {
+        width: 100%;
+    }
+
+    .main {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .item {
+        margin-left: 35px;
+        margin-bottom: 30px;
+    }
+    .w3-content {
+        max-width: 850px;
+    }
+    .product-details-container {
+        width: 95%;
+    }
+    .single-product-background.w3-content.w3-display-container {
+        padding: 70px !important;
+    }
+    .single-product.price {
+        font-size: 20px;
+    }
+    .order-item-image {
+        width: 25% !important;
+    }
+    .order-item-text {
+        width: 74% !important;
+    }
+
+    img.Ipad-logo-size.logo-image {
+        width: 60%;
+        margin-bottom: -41px;
+    }
+    .login.ui-content {
+        width: 50% !important;
+    }
+}
+
+
+
+/*Iphone Landscape*/
+
+
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+    img.register.Ipad-logo-size.logo-image {
+        width: 50%;
+    }
+    .login.ui-content {
+        width: 60% !important;
+    }
+    img.Ipad-logo-size.logo-image {
+        width: 50%;
+        margin-bottom: -40px !important;
+        margin-top: -40px;
+    }
+    img.forgot-password.Ipad-logo-size.logo-image {
+        width: 50%;
+        margin-bottom: -40px !important;
+        margin-top: -40px !important;
+    }
+    iframe#gmap_canvas {
+        width: 480px;
+    }
+    p.About-Us.Register-Account-Text {
+        padding-right: 125px !important;
+        margin-top: 30px !important;
+    }
+    p.UserNavigation.User-Profile-Edit.Register-Account-Text {
+        padding-right: 145px !important;
+    }
+    .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
+        padding-left: 145px !important;
+    }
+    ul.Profile-Navigation-List.ui-listview {
+        margin: 0em;
+        margin-top: 20px !important;
+        margin-bottom: 15px !important;
+    }
+
+    .header-class {
+        position: fixed !important;
+        top: -3px;
+        left: 0px;
+        right: 0px;
+        overflow: hidden;
+        height: 15%;
+    }
+
+    .main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .item {
+        margin-left: 30px;
+        margin-bottom: 30px;
+    }
+    .w3-content {
+        max-width: 850px;
+    }
+    .product-details-container {
+        width: 100%;
+    }
+    button.single-product-page.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
+        margin-right: 0px;
+    }
+    .order-item-image {
+        width: 30% !important;
+    }
+    .order-item-text {
+        width: 68% !important;
+    }
+
+
 }
