--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ img.forgot-password.Ipad-logo-size.logo-image {
     color: #ef963a;
 }
 
-.product{
+.product {
     display: grid;
 }
 
@@ -82,15 +82,11 @@ img.forgot-password.Ipad-logo-size.logo-image {
 }
 
 .product-details-container {
-  width: 50%;
-  /* margin-right: auto; */
-  margin-left: 29px;
-  float: left;
-  /height: auto;
-}
-
-.product.ui-content {
-    padding: 6em !important;
+    width: 50%;
+    /* margin-right: auto; */
+    margin-left: 29px;
+    float: left;
+    height: auto;
 }
 
 p.User-Profile-Edit.Register-Account-Text {
@@ -110,8 +106,6 @@ p.User-Profile-Edit.Register-Account-Text {
 img.User-registration.Ipad-logo-size.logo-image {
     margin-bottom: -40px;
 }
-
-
 
 p.logout.User-Profile-Edit.Register-Account-Text {
     float: left;
@@ -141,7 +135,6 @@ ul.Profile-Navigation-List.ui-listview {
     margin-bottom: 60px;
 }
 
-
 p.About-Us.Register-Account-Text {
     float: right;
     padding-right: 25px;
@@ -151,7 +144,6 @@ p.About-Us.Register-Account-Text {
 img.About-Us.User-registration.Ipad-logo-size.logo-image {
     margin-top: -40px;
 }
-
 
 .footer-icons {
     width: 28px;
@@ -172,7 +164,6 @@ img.About-Us.User-registration.Ipad-logo-size.logo-image {
 }
 
 .header-class {
-    position: absolute;
     top: -1px;
     left: 0px;
     right: 0px;
@@ -193,13 +184,13 @@ img.About-Us.User-registration.Ipad-logo-size.logo-image {
 }
 
 .btn-nav-bar img {
-  width: 20px;
-  height: auto;
+    width: 20px;
+    height: auto;
 }
 
 h1.header-title.ui-title {
-  font-size: 30px !important;
-  font-weight: normal;
+    font-size: 30px !important;
+    font-weight: normal;
 }
 
 .btn-home {
@@ -225,158 +216,163 @@ h1.header-title.ui-title {
 }
 
 .btn-userprofile img {
-  height: 50px;
-  margin-top: -50px;
+    height: 50px;
+    margin-top: -70px;
 }
 
 .navbar-header.ui-navbar {
-  margin-top: -2px;
+    margin-top: -2px;
 }
 
 li.second-nav-header {
-  padding: 5px !important;
+    padding: 5px !important;
 }
 
 .navbar-header.ui-navbar {
-  margin-right: 5px;
+    margin-right: 5px;
 }
 
 a.second-nav-header-radius.ui-link.ui-btn {
-  border-radius: 5px;
+    border-radius: 5px;
 }
+
 .main {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1px;
 }
+
 .item {
-  margin: 13px;
-  background: #6060602e;
-  border-radius: 20px;
-  width: 180px;
-  height: 190px;
+    margin: 13px;
+    background: #6060602e;
+    border-radius: 20px;
+    width: 180px;
+    height: 190px;
 }
 
 img.product-image-items-display {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 p.Product-Price {
-  text-align: left;
-  line-height: 3px;
-  margin-left: 20px;
+    text-align: left;
+    line-height: 3px;
+    margin-left: 20px;
 }
 
 h3.product-addtocart-popup {
-  text-align: center;
-  font-size: 16px;
-  margin-top: -20px;
-  font-weight: bold;
+    text-align: center;
+    font-size: 16px;
+    margin-top: -20px;
+    font-weight: bold;
 }
+
 .price {
-  display: inline-block;
-  font-size: 14px;
-  line-height: 1px;
-  font-weight: 100;
+    display: inline-block;
+    font-size: 14px;
+    line-height: 1px;
+    font-weight: 100;
 }
+
 .float-price {
-  float: right;
+    float: right;
 }
 
 button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
-  display: inline-block;
-  float: right;
-  width: auto;
-  font-size: 10px;
-  padding: unset;
-  border: none;
-  background: none;
-  margin-top: 7px;
+    display: inline-block;
+    float: right;
+    width: auto;
+    font-size: 10px;
+    padding: unset;
+    border: none;
+    background: none;
+    margin-top: 7px;
 }
 
 img.product-popup-icon {
-  width: 14px;
-  margin-left: 4px;
-  margin-right: 4px;
+    width: 14px;
+    margin-left: 4px;
+    margin-right: 4px;
 }
 
 .add-to-cart-button-div {
-  background: #ef963a;
-  display: inline-flex;
-  border-radius: 29px;
-  width: 29px;
-  padding-bottom: 5px;
-  padding: 7px;
+    background: #EF963A;
+    display: inline-flex;
+    border-radius: 29px;
+    width: 29px;
+    padding-bottom: 5px;
+    padding: 7px;
 }
 
 img.add-to-cart-plus-icon {
-  width: 25px;
-  padding-left: 2px;
-  margin-bottom: -2px;
+    width: 25px;
+    padding-left: 2px;
+    margin-bottom: -2px;
 }
 
 .align-addtocart {
-  float: right;
-  margin-top: -30px;
-  margin-right: 10px;
+    float: right;
+    margin-top: -30px;
+    margin-right: 10px;
 }
 
 .align-favourite {
-  float: right;
-  margin-right: 10px;
-  margin-bottom: -30px;
+    float: right;
+    margin-right: 10px;
+    margin-bottom: -30px;
 }
 
 h3.heading.ui-content {
-  margin-left: -10px !important;
-  margin-bottom: -20px !important;
+    margin-left: -10px !important;
+    margin-bottom: -20px !important;
 }
 
 
-
+/*ipad potrait*/
 
 button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
     font-size: 60px;
 }
 
 p.single-product-page-title {
-  font-size: 50px;
-  font-weight: 500;
-  line-height: 1px;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 1px;
 }
 
 .single-product-background.w3-content.w3-display-container {
-  background: #6060602e;
-  padding: 60px;
-  border-radius: 30px;
+    background: #6060602e;
+    padding: 60px;
+    border-radius: 30px;
 }
 
 span.single-product-page-photos-iconball.w3-badge.demo.w3-border.w3-transparent.w3-hover-white.w3-white {
-  width: 20px;
-  height: 20px;
+    width: 20px;
+    height: 20px;
 }
 
 .w3-large {
-  font-size: 30px !important;
+    font-size: 30px!important;
 }
 
 img.single-product.product-popup-icon {
-  width: 40px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: -50px;
+    width: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: -50px;
 }
+
 .single-product {
-  font-size: 20px !important;
+    font-size: 20px !important;
 }
 
 button.single-product-page.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
-  margin-right: -10px;
+    margin-right: -10px;
 }
 
 .favourites.ui-content {
-  width: 100% !important;
-  padding: unset;
+    width: 100% !important;
+    padding: unset;
 }
 
 .email-list-button {
@@ -445,140 +441,9 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
 }
 
 
-
-/*iphone potrait*/
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
-    button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
-        margin-top: -3px;
-    }
-}
-
-@media only screen and (orientation: portrait) and (min-device-width: 768px) and (max-device-width: 1024px) {
-    .header-class {
-        position: fixed !important;
-        top: -3px;
-        left: 0px;
-        right: 0px;
-        overflow: hidden;
-        height: 7%;
-    }
-}
-
-
-@media only screen and (max-device-width: 414px) {
-    .product-title-slideshow-container {
-        width: auto;
-        float: none;
-    }
-    .product-details-container {
-        margin-top: 2px;
-        height: auto;
-        float: none;
-        width: auto;
-    }
-    .w3-content {
-        max-width: 800px;
-    }
-    .w3-content,
-    .w3-auto {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .product-details-container button {
-        height: 90px;
-        font-size: xx-large;
-    }
-    .product-details-container p {
-        font-size: x-large;
-    }
-}
-
-
-@media only screen and (orientation: landscape) and (min-device-width: 768px) and (max-device-width: 1024px) {
-    .header-class {
-        position: fixed !important;
-        top: -3px;
-        left: 0px;
-        right: 0px;
-        overflow: hidden;
-        height: 12%;
-    }
-}
-
-@media only screen and (orientation: portrait) and (max-device-width: 414px) {
-    .header-class {
-        position: fixed !important;
-        top: -3px;
-        left: 0px;
-        right: 0px;
-        overflow: hidden;
-        height: 5%;
-    }
-}
-
-
-
-/*I Pad Potrait*/
-
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
-
-    .main {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .item {
-        margin-left: 35px;
-        margin-bottom: 30px;
-    }
-    .w3-content {
-        max-width: 820px;
-    }
-    .product-details-container {
-        width: 100%;
-    }
-    .order-item-image {
-        width: 31% !important;
-    }
-    .order-item-text {
-        width: 68% !important;
-    }
-
-    img.register.Ipad-logo-size.logo-image {
-        width: 65%;
-    }
-    img.Ipad-logo-size.logo-image {
-        width: 65%;
-    }
-    iframe#gmap_canvas {
-        width: 890px;
-    }
-    p.About-Us.Register-Account-Text {
-        padding-right: 60px !important;
-        margin-top: 30px !important;
-    }
-    p.UserNavigation.User-Profile-Edit.Register-Account-Text {
-        padding-right: 80px !important;
-    }
-    .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
-        padding-left: 80px !important;
-    }
-    h1.header-title.ui-title {
-        font-size: 35px !important;
-    }
-
-
-}
-
-
-
-
-
-/*I Pad Landscape*/
+/*Ipad Landcaoe*/
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-
-
     img.User-registration.Ipad-logo-size.logo-image {
         width: 50%;
         margin-bottom: -41px;
@@ -586,8 +451,6 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
     .login.ui-content {
         width: 50% !important;
     }
-
-
     .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
         padding-left: 250px;
     }
@@ -599,14 +462,12 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
         margin-top: 40px;
         margin-bottom: 40px;
     }
-
     iframe#gmap_canvas {
         width: 510px;
     }
     p.About-Us.Register-Account-Text {
         padding-right: 260px;
     }
-
     img.Ipad-logo-size.logo-image {
         width: 60%;
         margin-bottom: -41px;
@@ -620,7 +481,6 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
     .product-details-container {
         width: 100%;
     }
-
     .main {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -647,7 +507,6 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
     .order-item-text {
         width: 74% !important;
     }
-
     img.Ipad-logo-size.logo-image {
         width: 60%;
         margin-bottom: -41px;
@@ -658,9 +517,55 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
 }
 
 
+/*Ipad Potrait*/
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+    .main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .item {
+        margin-left: 35px;
+        margin-bottom: 30px;
+    }
+    .w3-content {
+        max-width: 820px;
+    }
+    .product-details-container {
+        width: 100%;
+    }
+    .order-item-image {
+        width: 31% !important;
+    }
+    .order-item-text {
+        width: 68% !important;
+    }
+    img.register.Ipad-logo-size.logo-image {
+        width: 65%;
+    }
+    img.Ipad-logo-size.logo-image {
+        width: 65%;
+    }
+    iframe#gmap_canvas {
+        width: 890px;
+    }
+    p.About-Us.Register-Account-Text {
+        padding-right: 60px !important;
+        margin-top: 30px !important;
+    }
+    p.UserNavigation.User-Profile-Edit.Register-Account-Text {
+        padding-right: 80px !important;
+    }
+    .UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
+        padding-left: 80px !important;
+    }
+    h1.header-title.ui-title {
+        font-size: 35px !important;
+    }
+}
+
 
 /*Iphone Landscape*/
-
 
 @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
     img.register.Ipad-logo-size.logo-image {
@@ -697,7 +602,6 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
         margin-top: 20px !important;
         margin-bottom: 15px !important;
     }
-
     .header-class {
         position: fixed !important;
         top: -3px;
@@ -706,7 +610,6 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
         overflow: hidden;
         height: 15%;
     }
-
     .main {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -730,6 +633,4 @@ button.remove-from-cart.ui-btn.ui-btn-none.ui-corner-all {
     .order-item-text {
         width: 68% !important;
     }
-
-
 }
