--- a/css/main.css
+++ b/css/main.css
@@ -222,17 +222,21 @@ h1.header-title.ui-title {
 }
 
 li.second-nav-header {
-  padding: 5px !important;
+  padding-left: 2% !important;
+  padding-right: 2% !important;
 }
 
 .navbar-header.ui-navbar {
-  margin-right: 5px;
+  margin-right: 7%;
+  margin-left: 7%;
   margin-top: -2px;
   margin-top: 80px;
+  font-size: 10px;
 }
 
 a.second-nav-header-radius.ui-link.ui-btn {
   border-radius: 5px;
+  font-size: 10px;
 }
 
 .main {
@@ -622,6 +626,11 @@ img.mySlides {
     font-weight: normal;
     margin-top: -10px !important;
   }
+
+  a.second-nav-header-radius.ui-link.ui-btn {
+    border-radius: 5px;
+    font-size: 15px;
+  }
 }
 
 /*Ipad Potrait*/
@@ -699,6 +708,11 @@ img.mySlides {
   .btn-userprofile img {
     height: 40px;
     margin-top: -70px;
+  }
+
+  a.second-nav-header-radius.ui-link.ui-btn {
+    border-radius: 5px;
+    font-size: 15px;
   }
 }
 
